bugfix: carousel animation no longer overlaps navbar

--- a/project-shopping-cart/src/styles/NavBar.css
+++ b/project-shopping-cart/src/styles/NavBar.css
@@ -13,6 +13,8 @@
   justify-content: flex-end;
 
   background-color: #252525;
+
+  z-index: 2;
 }
 
 .navBar ul {
